cleaned unused code and code formatting

--- a/index.html
+++ b/index.html
@@ -6,34 +6,25 @@
 </head>
 
 <body>
-   
+
     <div id="game-container">
         <div>
             <h4>Pattern Matching Game</h4>
-
         </div>
+
         <div>
             <label>win: <span id="win"></span></label>
             <label>loss: <span id="loss"></span></label>
-
         </div>
 
-
-        <div id="game">
-
-        </div>
+        <div id="game"></div>
 
         <div id="btn-container">
             <button id="play_btn">PLAY</button>
-
         </div>
-
-
 
     </div>
 </body>
 
 <script src="./index.js"></script>
-
-
 </html>
