--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
             <button id="play_btn">PLAY</button>
         </div>
 
+        <div id="how_to_play">
+            <h5>How to play?</h5>
+            <p>Click on play button and 3 pattern will be highlighted randomly. remember them and click on those pattern in the correct order</p>
+        </div>
+
     </div>
 </body>
 
